# kdev-perforce

./: .gitignore  CMakeLists.txt  INSTALL  Messages.sh  README  debug.h  kdevperforce.desktop  kdevperforce.desktop.cmake  kdevperforce.json  kdevperforce.rc  perforce.kdev4  perforceplugin.cpp  perforceplugin.h
p4clientstub/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  perforceplugintest.cpp  perforceplugintest.h  test_perforce.cpp  test_perforce.h
